// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InnerLayout should render correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root css-vj1n65-MuiGrid-root"
    />
  </div>
</DocumentFragment>
`;

exports[`MainLayout should render correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-aldfg4-MuiGrid-root"
  />
</DocumentFragment>
`;
